--- a/MergingResults_v1.ipynb
+++ b/MergingResults_v1.ipynb
@@ -216,308 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "03a24dcd-56a3-4e59-a3dc-339451f93da6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RNN_wtLRS_tf</th>\n",
-       "      <th>RNNp_wtLRS_tf</th>\n",
-       "      <th>oLSTM_wtLRS_tf</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.52.csv</th>\n",
-       "      <td>75.9634</td>\n",
-       "      <td>79.4974</td>\n",
-       "      <td>77.992</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv</th>\n",
-       "      <td>85.6642</td>\n",
-       "      <td>85.6588</td>\n",
-       "      <td>87.5522</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv</th>\n",
-       "      <td>81.2388</td>\n",
-       "      <td>80.6768</td>\n",
-       "      <td>81.623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv</th>\n",
-       "      <td>77.4656</td>\n",
-       "      <td>77.929</td>\n",
-       "      <td>77.1728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32.csv</th>\n",
-       "      <td>79.512</td>\n",
-       "      <td>79.6626</td>\n",
-       "      <td>80.5862</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   RNN_wtLRS_tf RNNp_wtLRS_tf  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...      75.9634       79.4974   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv      85.6642       85.6588   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv      81.2388       80.6768   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv      77.4656        77.929   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...       79.512       79.6626   \n",
-       "\n",
-       "                                                   oLSTM_wtLRS_tf  \n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...         77.992  \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv        87.5522  \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv         81.623  \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv        77.1728  \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...        80.5862  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lstm_wtlsr_wb_nes_tf</th>\n",
-       "      <th>lstm_wtlrs_wb_c</th>\n",
-       "      <th>rnnp_lrs_tf</th>\n",
-       "      <th>simplernn_lrs_tf</th>\n",
-       "      <th>lstm_wtlrs_wb_tf</th>\n",
-       "      <th>lstm_lrs_wb_tf</th>\n",
-       "      <th>lstm_wtlrs_nes_wb_c</th>\n",
-       "      <th>lstm_lrs_wb_c</th>\n",
-       "      <th>lstm_wtlrs_wb_c.1</th>\n",
-       "      <th>rnnp_lrs_c</th>\n",
-       "      <th>simplernn_wbias_c</th>\n",
-       "      <th>simplernn_wtbias_c</th>\n",
-       "      <th>olstm_wtlrs_c</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.52.csv</th>\n",
-       "      <td>75.69</td>\n",
-       "      <td>75.45</td>\n",
-       "      <td>72.36</td>\n",
-       "      <td>73.90</td>\n",
-       "      <td>73.44</td>\n",
-       "      <td>74.64</td>\n",
-       "      <td>75.17</td>\n",
-       "      <td>75.56</td>\n",
-       "      <td>75.45</td>\n",
-       "      <td>78.04</td>\n",
-       "      <td>74.72</td>\n",
-       "      <td>72.47</td>\n",
-       "      <td>75.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv</th>\n",
-       "      <td>84.52</td>\n",
-       "      <td>84.52</td>\n",
-       "      <td>77.18</td>\n",
-       "      <td>81.08</td>\n",
-       "      <td>80.19</td>\n",
-       "      <td>82.97</td>\n",
-       "      <td>84.45</td>\n",
-       "      <td>84.53</td>\n",
-       "      <td>84.52</td>\n",
-       "      <td>85.73</td>\n",
-       "      <td>84.96</td>\n",
-       "      <td>80.22</td>\n",
-       "      <td>84.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv</th>\n",
-       "      <td>80.32</td>\n",
-       "      <td>78.88</td>\n",
-       "      <td>73.92</td>\n",
-       "      <td>77.47</td>\n",
-       "      <td>77.47</td>\n",
-       "      <td>78.13</td>\n",
-       "      <td>78.79</td>\n",
-       "      <td>78.83</td>\n",
-       "      <td>78.88</td>\n",
-       "      <td>81.47</td>\n",
-       "      <td>79.12</td>\n",
-       "      <td>78.16</td>\n",
-       "      <td>78.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv</th>\n",
-       "      <td>76.78</td>\n",
-       "      <td>77.29</td>\n",
-       "      <td>71.69</td>\n",
-       "      <td>73.03</td>\n",
-       "      <td>73.42</td>\n",
-       "      <td>74.96</td>\n",
-       "      <td>77.30</td>\n",
-       "      <td>77.26</td>\n",
-       "      <td>77.29</td>\n",
-       "      <td>79.31</td>\n",
-       "      <td>75.23</td>\n",
-       "      <td>71.52</td>\n",
-       "      <td>77.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32.csv</th>\n",
-       "      <td>79.40</td>\n",
-       "      <td>78.96</td>\n",
-       "      <td>71.92</td>\n",
-       "      <td>76.65</td>\n",
-       "      <td>76.64</td>\n",
-       "      <td>77.66</td>\n",
-       "      <td>79.00</td>\n",
-       "      <td>79.36</td>\n",
-       "      <td>78.96</td>\n",
-       "      <td>81.21</td>\n",
-       "      <td>78.96</td>\n",
-       "      <td>77.77</td>\n",
-       "      <td>78.96</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    lstm_wtlsr_wb_nes_tf  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...                 75.69   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv                 84.52   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv                 80.32   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv                 76.78   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...                 79.40   \n",
-       "\n",
-       "                                                    lstm_wtlrs_wb_c  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...            75.45   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv            84.52   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv            78.88   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv            77.29   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...            78.96   \n",
-       "\n",
-       "                                                    rnnp_lrs_tf  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...        72.36   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv        77.18   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv        73.92   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv        71.69   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...        71.92   \n",
-       "\n",
-       "                                                    simplernn_lrs_tf  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...             73.90   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv             81.08   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv             77.47   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv             73.03   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...             76.65   \n",
-       "\n",
-       "                                                    lstm_wtlrs_wb_tf  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...             73.44   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv             80.19   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv             77.47   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv             73.42   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...             76.64   \n",
-       "\n",
-       "                                                    lstm_lrs_wb_tf  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...           74.64   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv           82.97   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv           78.13   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv           74.96   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...           77.66   \n",
-       "\n",
-       "                                                    lstm_wtlrs_nes_wb_c  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...                75.17   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv                84.45   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv                78.79   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv                77.30   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...                79.00   \n",
-       "\n",
-       "                                                    lstm_lrs_wb_c  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...          75.56   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv          84.53   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv          78.83   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv          77.26   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...          79.36   \n",
-       "\n",
-       "                                                    lstm_wtlrs_wb_c.1  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...              75.45   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv              84.52   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv              78.88   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv              77.29   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...              78.96   \n",
-       "\n",
-       "                                                    rnnp_lrs_c  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...       78.04   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv       85.73   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv       81.47   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv       79.31   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...       81.21   \n",
-       "\n",
-       "                                                    simplernn_wbias_c  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...              74.72   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv              84.96   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv              79.12   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv              75.23   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...              78.96   \n",
-       "\n",
-       "                                                    simplernn_wtbias_c  \\\n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...               72.47   \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv               80.22   \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv               78.16   \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv               71.52   \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...               77.77   \n",
-       "\n",
-       "                                                    olstm_wtlrs_c  \n",
-       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...          75.45  \n",
-       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv          84.52  \n",
-       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv          78.88  \n",
-       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv          77.29  \n",
-       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...          78.96  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "import pandas as pd\n",
@@ -535,19 +237,33 @@
     "    for result in results:\n",
     "        result_pd = (pd.read_csv(path + \"/\" + result_folder + \"/\" + result, header=None, index_col=0))\n",
     "        results_dict[(result_pd.loc[f'dataset_name'].values[0].split('/')[-1])] = result_pd.loc[f'accuracy_avg'].values[0]\n",
-    "    results_pd = pd.concat([results_pd, pd.DataFrame.from_dict(results_dict, orient='index', columns=[f'{result_folder.split(\"_\")[1]}_{result_folder.split(\"_\")[2]}_tf'])], axis=1)\n",
-    "display(results_pd)\n",
-    "\n",
-    "readfile = pd.read_csv(\"./results/merge_results_5bigdatasets.csv\", index_col='dataset',sep='[;,]', engine='python')\n",
-    "readfile.index.name = None\n",
-    "display(readfile)\n",
-    "pd.concat([readfile, results_pd], axis=1).to_csv(\"./results/merge_results_5bigdatasets_new.csv\", index=True, index_label='dataset', mode='w') "
+    "    results_pd = pd.concat([results_pd, pd.DataFrame.from_dict(results_dict, orient='index', columns=[f'{result_folder.split(\"_\")[1]}_{result_folder.split(\"_\")[2]}_{result_folder.split(\"_\")[3]}_tf'])], axis=1)\n",
+    "readfile.to_csv(\"./results/2_rnn_plus/\"+prefix+\"_merge_results_5bigdatasets.csv\", index=True, index_label='dataset', mode='w') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "684b8c08-cc0a-4525-aacb-5750145fdc74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = False\n",
+    "print(f'a={a}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "684b8c08-cc0a-4525-aacb-5750145fdc74",
+   "id": "e565c029-d5e6-4a64-86b2-14ac9ef9e866",
    "metadata": {},
    "outputs": [],
    "source": []
