--- a/MergingResults_v1.ipynb
+++ b/MergingResults_v1.ipynb
@@ -216,54 +216,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "id": "03a24dcd-56a3-4e59-a3dc-339451f93da6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lstm_wLRS_wCMF_tf</th>\n",
+       "      <th>lstm_wLRS_wtCMF_tf</th>\n",
+       "      <th>lstm_wtLRS_wCMF_tf</th>\n",
+       "      <th>lstm_wtLRS_wtCMF_tf</th>\n",
+       "      <th>rnn_plus_wLRS_wCMF_tf</th>\n",
+       "      <th>rnn_plus_wLRS_wtCMF_tf</th>\n",
+       "      <th>rnn_plus_wtLRS_wCMF_tf</th>\n",
+       "      <th>rnn_plus_wtLRS_wtCMF_tf</th>\n",
+       "      <th>rnn_wLRS_wCMF_tf</th>\n",
+       "      <th>rnn_wLRS_wtCMF_tf</th>\n",
+       "      <th>rnn_wtLRS_wCMF_tf</th>\n",
+       "      <th>rnn_wtLRS_wtCMF_tf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.52.csv</th>\n",
+       "      <td>77.4432</td>\n",
+       "      <td>79.8544</td>\n",
+       "      <td>77.2614</td>\n",
+       "      <td>77.6418</td>\n",
+       "      <td>76.5922</td>\n",
+       "      <td>81.2998</td>\n",
+       "      <td>79.31</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>78.978</td>\n",
+       "      <td>76.6766</td>\n",
+       "      <td>78.0306</td>\n",
+       "      <td>75.9748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv</th>\n",
+       "      <td>87.7844</td>\n",
+       "      <td>89.601</td>\n",
+       "      <td>87.6564</td>\n",
+       "      <td>86.33</td>\n",
+       "      <td>86.4996</td>\n",
+       "      <td>86.8418</td>\n",
+       "      <td>87.2968</td>\n",
+       "      <td>86.1586</td>\n",
+       "      <td>86.11</td>\n",
+       "      <td>86.589</td>\n",
+       "      <td>86.1878</td>\n",
+       "      <td>86.3844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv</th>\n",
+       "      <td>81.6888</td>\n",
+       "      <td>82.5512</td>\n",
+       "      <td>81.4258</td>\n",
+       "      <td>81.311</td>\n",
+       "      <td>82.2842</td>\n",
+       "      <td>82.414</td>\n",
+       "      <td>79.4948</td>\n",
+       "      <td>80.2844</td>\n",
+       "      <td>81.221</td>\n",
+       "      <td>81.6778</td>\n",
+       "      <td>80.8746</td>\n",
+       "      <td>79.974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv</th>\n",
+       "      <td>78.0948</td>\n",
+       "      <td>77.9632</td>\n",
+       "      <td>77.6428</td>\n",
+       "      <td>77.4606</td>\n",
+       "      <td>79.2492</td>\n",
+       "      <td>78.5956</td>\n",
+       "      <td>77.5564</td>\n",
+       "      <td>77.8658</td>\n",
+       "      <td>78.2436</td>\n",
+       "      <td>77.5912</td>\n",
+       "      <td>77.6774</td>\n",
+       "      <td>77.1536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32.csv</th>\n",
+       "      <td>80.9994</td>\n",
+       "      <td>80.8718</td>\n",
+       "      <td>80.4736</td>\n",
+       "      <td>80.6426</td>\n",
+       "      <td>80.437</td>\n",
+       "      <td>80.3684</td>\n",
+       "      <td>80.3294</td>\n",
+       "      <td>78.7056</td>\n",
+       "      <td>78.6564</td>\n",
+       "      <td>78.5072</td>\n",
+       "      <td>80.5446</td>\n",
+       "      <td>79.0458</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   lstm_wLRS_wCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...           77.4432   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv           87.7844   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv           81.6888   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv           78.0948   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...           80.9994   \n",
+       "\n",
+       "                                                   lstm_wLRS_wtCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...            79.8544   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv             89.601   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv            82.5512   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv            77.9632   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...            80.8718   \n",
+       "\n",
+       "                                                   lstm_wtLRS_wCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...            77.2614   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv            87.6564   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv            81.4258   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv            77.6428   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...            80.4736   \n",
+       "\n",
+       "                                                   lstm_wtLRS_wtCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...             77.6418   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv               86.33   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv              81.311   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv             77.4606   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...             80.6426   \n",
+       "\n",
+       "                                                   rnn_plus_wLRS_wCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...               76.5922   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv               86.4996   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv               82.2842   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv               79.2492   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...                80.437   \n",
+       "\n",
+       "                                                   rnn_plus_wLRS_wtCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...                81.2998   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv                86.8418   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv                 82.414   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv                78.5956   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...                80.3684   \n",
+       "\n",
+       "                                                   rnn_plus_wtLRS_wCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...                  79.31   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv                87.2968   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv                79.4948   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv                77.5564   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...                80.3294   \n",
+       "\n",
+       "                                                   rnn_plus_wtLRS_wtCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...                    77.3   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv                 86.1586   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv                 80.2844   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv                 77.8658   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...                 78.7056   \n",
+       "\n",
+       "                                                   rnn_wLRS_wCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...           78.978   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv            86.11   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv           81.221   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv          78.2436   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...          78.6564   \n",
+       "\n",
+       "                                                   rnn_wLRS_wtCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...           76.6766   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv            86.589   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv           81.6778   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv           77.5912   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...           78.5072   \n",
+       "\n",
+       "                                                   rnn_wtLRS_wCMF_tf  \\\n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...           78.0306   \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv           86.1878   \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv           80.8746   \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv           77.6774   \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...           80.5446   \n",
+       "\n",
+       "                                                   rnn_wtLRS_wtCMF_tf  \n",
+       "seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.5...            75.9748  \n",
+       "seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv            86.3844  \n",
+       "seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv             79.974  \n",
+       "seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv            77.1536  \n",
+       "seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32...            79.0458  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os, sys\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "path = \"./results/2_rnn_plus/20122021\"\n",
+    "prefix = '28122021'\n",
+    "path = f\"./results/2_rnn_plus/{prefix}\"\n",
     "results_list = sorted(os.listdir(path))\n",
-    "prefix = '20122021'\n",
     "\n",
     "results_pd = pd.DataFrame()\n",
     "results_dict = {}\n",
-    "for result_folder in results_list:\n",
-    "    results = sorted(os.listdir(path + \"/\" + result_folder))\n",
-    "    for result in results:\n",
-    "        result_pd = (pd.read_csv(path + \"/\" + result_folder + \"/\" + result, header=None, index_col=0))\n",
-    "        results_dict[(result_pd.loc[f'dataset_name'].values[0].split('/')[-1])] = result_pd.loc[f'accuracy_avg'].values[0]\n",
-    "    results_pd = pd.concat([results_pd, pd.DataFrame.from_dict(results_dict, orient='index', columns=[f'{result_folder.split(\"_\")[1]}_{result_folder.split(\"_\")[2]}_{result_folder.split(\"_\")[3]}_tf'])], axis=1)\n",
-    "readfile.to_csv(\"./results/2_rnn_plus/\"+prefix+\"_merge_results_5bigdatasets.csv\", index=True, index_label='dataset', mode='w') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "684b8c08-cc0a-4525-aacb-5750145fdc74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a=False\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = False\n",
-    "print(f'a={a}')"
+    "count = 0\n",
+    "for result in results_list:\n",
+    "    result_pd = (pd.read_csv(path + \"/\" + result, header=None, index_col=0))\n",
+    "    if f'{result.split(\"f\")[0]}f' in results_dict.keys():\n",
+    "        results_dict[f'{result.split(\"f\")[0]}f'][result_pd.loc[f'dataset_name'].values[0].split('/')[-1]] = result_pd.loc[f'accuracy_avg'].values[0]\n",
+    "    else:\n",
+    "        results_dict[f'{result.split(\"f\")[0]}f'] = {result_pd.loc[f'dataset_name'].values[0].split('/')[-1]: result_pd.loc[f'accuracy_avg'].values[0]}\n",
+    "\n",
+    "for test in results_dict.keys():\n",
+    "    results_pd = pd.concat([results_pd, pd.DataFrame(data=results_dict[test].values(), index=results_dict[test].keys(), columns=[str(test)])], axis=1)\n",
+    "display(results_pd)\n",
+    "results_pd.to_csv(f\"./results/3_mergeResults/{prefix}_merge_results_5bigdatasets.csv\", index=True, index_label='dataset', mode='w') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e565c029-d5e6-4a64-86b2-14ac9ef9e866",
+   "id": "ed00f0dc-f457-4013-9b57-dbe4fa1f0d6b",
    "metadata": {},
    "outputs": [],
    "source": []
